--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
 <body>
   <div id="result-form">
     <div class="res-string">
       <div class="img-link">
-        <a href="https://jarscannabis.com/"><img src="./img/logo.png"></a>
+        <a href="https://jarscannabis.com/"><img src="logo.png"></a>
       </div>
       <div class="info">
         <h1>Name & Surname</h1>
@@ -26,6 +26,6 @@
     <input type="text" value="" id="input-text-three" placeholder="Info">
   </form>
   </script>
-  <script src="./js/app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
