--- a/index.html
+++ b/index.html
@@ -1,31 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Document</title>
-</head>
-<body>
-  <div id="result-form">
-    <div class="res-string">
-      <div class="img-link">
-        <a href="https://jarscannabis.com/"><img src="logo.png"></a>
-      </div>
-      <div class="info">
-        <h1>Name & Surname</h1>
-        <h2>Position</h2>
-        <h3>Info</h3>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div id="result-form">
+      <div class="res-string">
+        <div class="img-link">
+          <a href="https://jarscannabis.com/"><img src="logo.png" /></a>
+        </div>
+        <div class="info">
+          <h1>Name & Surname</h1>
+          <h2>Position</h2>
+          <div class="phone-num">
+            <h3>Info</h3>
+            <a href="https://jarscannabis.com/">JARSCANNABIS.COM</a> 
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-  <form action="#" id="form-inform">
-    <input type="text" value="" id="input-text-one" placeholder="Name & Surname">
-    <input type="text" value="" id="input-text-two" placeholder="Position">
-    <input type="text" value="" id="input-text-three" placeholder="Info">
-  </form>
-  </script>
-  <script src="app.js"></script>
-</body>
+    <form action="#" id="form-inform">
+      <input
+        type="text"
+        value=""
+        id="input-text-one"
+        placeholder="Name & Surname"
+      />
+      <input type="text" value="" id="input-text-two" placeholder="Position" />
+      <input type="text" value="" id="input-text-three" placeholder="Info" />
+      <button type="button" id="btn-save">
+        Save
+      </button>
+    </form>
+    <script src="app.js"></script>
+  </body>
 </html>
