--- a/index.html
+++ b/index.html
@@ -4,26 +4,148 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <!-- <link rel="stylesheet" href="style.css" /> -->
     <title>Document</title>
   </head>
   <body>
-    <div id="result-form">
+    <div id="result-form" class="result-form">
       <div class="res-string">
         <div class="img-link">
-          <a href="https://jarscannabis.com/"><img src="logo.png" /></a>
+          <a href="https://jarscannabis.com/"
+            ><img
+              src="file:///C:/Users/%D0%90%D0%B4%D0%BC%D0%B8%D0%BD%D0%B8%D1%81%D1%82%D1%80%D0%B0%D1%82%D0%BE%D1%80/Desktop/ONE/firstJob/logo.png"
+          /></a>
         </div>
         <div class="info">
-          <h1>Name & Surname</h1>
-          <h2>Position</h2>
+          <h1>1</h1>
+          <h2>2</h2>
           <div class="phone-num">
-            <h3>Info</h3>
-            <a href="https://jarscannabis.com/">JARSCANNABIS.COM</a> 
+            <h3>3</h3>
+            <a href="https://jarscannabis.com/">JARSCANNABIS.COM</a>
           </div>
         </div>
       </div>
     </div>
-    <form action="#" id="form-inform">
+    <style>
+      @font-face {
+        font-family: "Gobold";
+        src: url("./fonts/fonts/Gobold\ Regular\ Italic.eot");
+        src: local("☺"),
+          url("./fonts/fonts/Gobold\ Regular\ Italic.woff") format("woff"),
+          url("./fonts//fonts/Gobold\ Regular\ Italic.ttf") format("truetype"),
+          url("./fonts/fonts/Gobold\ Regular\ Italic.svg") format("svg");
+        font-weight: normal;
+        font-style: normal;
+      }
+      @font-face {
+        font-family: "Conv Italic";
+        src: url("./fonts/fonts/Gobold\ Bold\ Italic.woff");
+      }
+      @font-face {
+        font-family: "Helvetica Neue Bold";
+        src: url("./fonts/fonts/HelveticaNeueBold.woff");
+      }
+      .img-link {
+        width: 100px;
+        border: none;
+        border-right: 2px solid black;
+        padding: 10px;
+        text-align: center;
+      }
+      .img-link img {
+        width: 100%;
+        height: auto;
+        user-select: none;
+      }
+      .res-string {
+        display: flex;
+        align-items: center;
+      }
+      .info h1,
+      .info h2,
+      .info h3 {
+        margin: 5px 0;
+        font-family: "Gobold", sans-serif;
+      }
+      .info h1 {
+        font-family: "Conv Italic", sans-serif;
+        font-size: 22px;
+      }
+      .info h2 {
+        font-size: 12px;
+      }
+      .info h3,
+      .phone-num a {
+        font-family: "Helvetica Neue Bold", sans-serif;
+      }
+      .info {
+        margin-left: 20px;
+        width: 100%;
+      }
+      .result-form {
+        margin: 0 auto;
+        width: 600px;
+        padding: 0 100px;
+      }
+      .form-inform {
+        display: flex;
+        flex-direction: column;
+        width: 400px;
+        margin: 0 auto;
+      }
+      .form-inform input {
+        margin: 10px 0;
+        padding: 10px 0;
+        outline: none;
+        border: 1px solid rgba(128, 128, 128, 0.301);
+        border-radius: 4px;
+      }
+      .form-inform input::placeholder {
+        padding: 0 10px;
+      }
+      .form-inform input:focus {
+        box-shadow: 2px 2px 5px rgb(0, 63, 0);
+      }
+      .phone-num {
+        display: flex;
+        align-items: center;
+        justify-content: left;
+      }
+      .phone-num h3 {
+        border-right: 1px solid black;
+        padding-right: 10px;
+      }
+      .phone-num a {
+        padding-left: 10px;
+        text-decoration: none;
+        color: black;
+      }
+      input[type="file"] {
+        display: none;
+      }
+      .custom-file-upload {
+        border: 1px solid #ccc;
+        display: inline-block;
+        padding: 6px 12px;
+        cursor: pointer;
+        width: 55px;
+        margin: 0 auto;
+        text-align: center;
+      }
+      #btn-save {
+        margin: 10px auto;
+        border: none;
+        background-color: black;
+        color: white;
+        border-radius: 5px;
+        padding: 10px 25px;
+        cursor: pointer;
+      }
+      .none {
+        display: none;
+      }
+    </style>
+    <form action="#" class="form-inform" id="form-inform">
       <input
         type="text"
         value=""
@@ -32,9 +154,7 @@
       />
       <input type="text" value="" id="input-text-two" placeholder="Position" />
       <input type="text" value="" id="input-text-three" placeholder="Info" />
-      <button type="button" id="btn-save">
-        Save
-      </button>
+      <button type="button" id="btn-save">Save</button>
     </form>
     <script src="app.js"></script>
   </body>
